--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://hardeep-personal.github.io/fwic-assignment",
+  "homepage":"https://hardeep-personal.github.io/intel",
   "name": "fwic",
   "version": "0.1.0",
   "private": true,
